Some bib clean up.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -28,23 +28,6 @@
   year = {1984},
   number = {4},
   pages = {337--344 (1985)},
-  issn = {0008-0624},
-  coden = {CDABAE},
-  mrclass = {65N30 (76-08 76D07)},
-  mrnumber = {MR799997 (86m:65136)},
-  mrreviewer = {Gheorghe Micula},
-  abstract = {
-We present in this paper a new velocity-pressure finite
-element for the computation of Stokes flow.  We discretize the velocity
-field iwth continuous piecewise linear functions enriched by bubble
-functions, and the pressure by piecewise linear functions.  We show
-that this element satisfies the usual inf-sup condition and converges
-with first order for both velocities and pressures.  Finally we relate
-this element to families of higher order elements and to the popular
-Taylor-Hood element.
-},
-  keywords = {finite element, Stokes equations},
-  subjclass = {65N30},
   pdf = {http://umn.edu/~arnold/papers/mini.pdf}
 }
 
@@ -89,12 +72,6 @@ Taylor-Hood element.
   pages = {xxii+382},
   series = {Studies in Advanced Mathematics},
   note = {With 1 CD-ROM (Windows, Macintosh, UNIX and LINUX)},
-  isbn = {1-58488-438-X},
-  mrclass = {65-02 (65N12 65N15 65N30)},
-  mrnumber = {MR2000261 (2004h:65004)},
-  mrreviewer = {Stefka N. Dimova},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{Abdul-RahmanKasper2008,
@@ -112,17 +89,13 @@ Taylor-Hood element.
 
 @article {AdamsCockburn2005,
    author = {Adams, Scot and Cockburn, Bernardo},
-   affiliation = {University of Minnesota School of Mathematics Minneapolis MN 55455 U.S.A Minneapolis MN 55455 U.S.A},
    title = {A Mixed Finite Element Method for Elasticity in Three Dimensions},
    journal = {Journal of Scientific Computing},
    publisher = {Springer Netherlands},
-   issn = {0885-7474},
-   keyword = {Mathematics and Statistics},
    pages = {515-521},
    volume = {25},
-   issue = {3},
+   number = {3},
    url = {http://dx.doi.org/10.1007/s10915-004-4807-3},
-   note = {10.1007/s10915-004-4807-3},
    year = {2005}
 }
 
@@ -169,10 +142,6 @@ Taylor-Hood element.
   volume = {42},
   pages = {2320--2341},
   number = {6},
-  file = {:Ainsworth2005.pdf:PDF},
-  owner = {massing},
-  publisher = {[Philadelphia, Pa.]: The Society.},
-  timestamp = {2009.05.27}
 }
 
 @ARTICLE{AinsworthDemkowiczKim2007,
@@ -304,18 +273,6 @@ Taylor-Hood element.
   timestamp = {2009.06.07}
 }
 
-@comment{FIXME published duplicate}
-@ARTICLE{AlnaesLoggMardalEtAl2008,
-  author = {M. S. Aln\ae{}s and A. Logg and K.-A. Mardal and O. Skavhaug and
-	H. P. Langtangen},
-  title = {Unified Framework for Finite Element Assembly},
-  journal = {Submitted to International Journal of Computational Science and Engineering},
-  year = {2008},
-  number = {2},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
 @MANUAL{AlnaesMardal2009,
   title = {{SyFi} User Manual},
   author = {M. S. Aln\ae{}s and K.-A. Mardal},
@@ -337,21 +294,6 @@ Taylor-Hood element.
   title = {{UFC}: },
   year = {2009},
   note = {URL: \url{http://fenics.org/ufc}}
-}
-
-@comment{FIXME published}
-@ARTICLE{AlnaesLoggMardalEtAl2009a,
-  author = {Martin S. Aln{\ae}s and Anders Logg and Kent-Andre Mardal and Ola
-	Skavhaug and Hans Petter Langtangen},
-  title = {Unified Framework for Finite Element Assembly},
-  journal = {International Journal of Computational Science and Engineering},
-  year = {2009},
-  note = {referee reports 2008-03-07, proofs 2009-05-06},
-  category = {articles},
-  owner = {logg},
-  simula = {ok},
-  status = {accepted},
-  timestamp = {2009.06.06}
 }
 
 @MANUAL{AlnaesMardal2009a,
@@ -6262,13 +6204,6 @@ Taylor-Hood element.
   timestamp = {2009.06.06}
 }
 
-@MISC{LoggWellsetEtAl2009,
-  author = {A.~Logg and G.~Wells and et. al.},
-  title = {{DOLFIN}: },
-  year = {2009},
-  note = {URL: \url{http://fenics.org/dolfin}}
-}
-
 @ARTICLE{LoggWells2010,
   author = {A. Logg and G. N. Wells},
   title = {{DOLFIN}: {A}utomated Finite Element Computing},
@@ -6277,12 +6212,6 @@ Taylor-Hood element.
   volume = {32},
   pages = {1--28},
   number = {2},
-  category = {articles},
-  doi = {10.1145/1731022.1731030},
-  owner = {logg},
-  simula = {ok},
-  status = {submitted},
-  timestamp = {2009.06.06},
   url = {http://dx.doi.org/10.1145/1731022.1731030}
 }
 
@@ -6333,9 +6262,6 @@ Taylor-Hood element.
     note = {http://www.autodiff.org/ad04/abstracts/Long.pdf}
 }
 
-
-
-
 @ARTICLE{LongstrethNelsonKoepsellEtAl1994,
   author = {WT Longstreth and LM Nelson and TD Koepsell and G van Belle },
   title = {Subarachnoid hemorrhage and hormonal factors in women. A population-based
@@ -6348,29 +6274,14 @@ Taylor-Hood element.
 
 @ARTICLE{LonsingVerfurth2004,
   author = {Lonsing, M. and Verf{\"u}rth, R.},
-  title = {{A posteriori error estimators for mixed finite element methods in
-	linear elasticity}},
+  title = {A posteriori error estimators for mixed finite element methods in
+	linear elasticity},
   journal = {Numerische Mathematik},
   year = {2004},
   volume = {97},
   pages = {757--778},
   number = {4},
-  abstract = {Three a posteriori error estimators for P EERS and BDMS ele-
-
-	ments in linear elasticity are presented: one residual error estimator
-	and two
-
-	estimators based on the solution of auxiliary local problems with
-	different
-
-	boundary conditions. All of them are reliable and efficient with respect
-	to the
-
-	standard norm and furthermore robust for nearly incompressible materials.},
-  file = {:LonsingVerfurth2004.pdf:PDF},
-  owner = {massing},
   publisher = {Springer},
-  timestamp = {2009.05.27}
 }
 
 @ARTICLE{Lopes2007,
@@ -6384,11 +6295,10 @@ Taylor-Hood element.
   timestamp = {2009.06.07}
 }
 
-
 @ARTICLE{LopesPereiraTrabucho,
   author = {N. D. Lopes and P. J. S. Pereira and L. Trabucho},
   title = {A numerical analysis of a class of generalized {B}oussinesq-type equations
-              using continuous/discontinuous {FEM} },
+              using continuous/discontinuous {FEM}},
   journal = {Submitted},
   owner = {logg},
   timestamp = {2009.06.07}
@@ -6409,71 +6319,32 @@ Taylor-Hood element.
 @ARTICLE{LotzMeierLeppertEtAl2002,
   author = {Lotz, Joachim and Meier, Christian and Leppert, Andreas and Galanski,
 	Michael},
-  title = {{Cardiovascular Flow Measurement with Phase-Contrast MR Imaging:
-	Basic Facts and Implementation1}},
+  title = {Cardiovascular Flow Measurement with Phase-Contrast {MR} Imaging:
+	{B}asic Facts and Implementation1},
   journal = {Radiographics},
   year = {2002},
   volume = {22},
   pages = {651-671},
   number = {3},
-  abstract = {Phase-contrast magnetic resonance (MR) imaging is a well-known but
-	undervalued method of obtaining quantitative information on blood
-	flow. Applications of this technique in cardiovascular MR imaging
-	are expanding. According to the sequences available, phase-contrast
-	measurement can be performed in a breath hold or during normal respiration.
-	Prospective as well as retrospective gating techniques can be used.
-	Common errors in phase-contrast imaging include mismatched encoding
-	velocity, deviation of the imaging plane, inadequate temporal resolution,
-	inadequate spatial resolution, accelerated flow and spatial misregistration,
-	and phase offset errors. Flow measurements are most precise if the
-	imaging plane is perpendicular to the vessel of interest and flow
-	encoding is set to through-plane flow. The sequence should be repeated
-	at least once, with a high encoding velocity used initially. If peak
-	velocity has to be estimated, flow measurement is repeated with an
-	adapted encoding velocity. The overall error of a phase-contrast
-	flow measurement comprises errors during prescription as well as
-	errors that occur during image analysis of the flow data. With phase-
-	contrast imaging, the overall error in flow measurement can be reduced
-	to less than 10%, an acceptable level of error for routine clinical
-	use. © RSNA, 2002},
-  eprint = {http://radiographics.rsna.org/content/22/3/651.full.pdf+html},
   url = {http://radiographics.rsna.org/content/22/3/651.abstract}
 }
 
 @ARTICLE{LovadinaStenberg2006,
   author = {Lovadina, C. and Stenberg, R.},
-  title = {{Energy norm a posteriori error estimates for mixed finite element
-	methods}},
+  title = {Energy norm a posteriori error estimates for mixed finite element
+	methods},
   journal = {Mathematics of Computation},
   year = {2006},
   volume = {75},
   pages = {1659},
   number = {256},
-  abstract = {This paper deals with the a posteriori error analysis of mixed
-
-	finite element methods for second order elliptic equations. It is
-	shown that a
-
-	reliable and efficient error estimator can be constructed using a
-	postprocessed
-
-	solution of the method. The analysis is performed in two different
-	ways: under
-
-	a saturation assumption and using a Helmholtz decomposition for vector
-	fields.},
-  file = {:LovadinaStenberg2006.pdf:PDF},
-  owner = {massing},
-  publisher = {American Mathematical Society},
-  timestamp = {2009.05.27}
 }
 
 @BOOK{LucaMVenezianiEtAl2009,
   title = {Cardiovascular Mathematics},
   publisher = {Springer},
   year = {2009},
-  author = {Formaggia Luca and Quarteroni Alfio M and Veneziani and Allesandro
-	(Eds.)}
+  author = {Formaggia Luca and Quarteroni Alfio M and Veneziani and Allesandro (Eds.)}
 }
 
 @BOOK{Lutz2007,
@@ -6535,9 +6406,6 @@ Taylor-Hood element.
   volume = {459},
   pages = {1075--1104},
   number = {2033},
-  issn = {1364-5021},
-  owner = {logg},
-  timestamp = {2009.06.07}
 }
 
 @ARTICLE{MakinoAarseth1992,
@@ -6569,12 +6437,6 @@ Taylor-Hood element.
   volume = {19},
   pages = {1299--1310},
   number = {10},
-  coden = {IJESAN},
-  fjournal = {International Journal of Engineering Science},
-  issn = {0020-7225},
-  mrclass = {73K25},
-  mrnumber = {MR660563 (83k:73053)},
-  mrreviewer = {Noboru Kikuchi}
 }
 
 @ARTICLE{MarckmannVerron2006,
@@ -6595,12 +6457,6 @@ Taylor-Hood element.
   volume = {40},
   pages = {1605--1631 (electronic)},
   number = {5},
-  fjournal = {SIAM Journal on Numerical Analysis},
-  issn = {0036-1429},
-  mrclass = {76M10 (65N15 65N30 76D07 76S05)},
-  mrnumber = {MR1950614 (2003m:76110)},
-  owner = {logg},
-  timestamp = {2009.06.07}
 }
 
 @MISC{MardalAlnaes2009,
@@ -6697,7 +6553,7 @@ Taylor-Hood element.
   author = {K.-A. Mardal and R. Winther},
   title = {Preconditioning discretizations of systems of partial differential
 	equations},
-  journal = { Numerical Linear Algebra with Applications}
+  journal = {Numerical Linear Algebra with Applications}
 }
 
 @ARTICLE{MardalWinther2006,
@@ -6809,11 +6665,6 @@ Taylor-Hood element.
   pages = {667--687},
   number = {6},
   month = {Dec},
-  file = {McLa_1971_667.pdf:McLa_1971_667.pdf:PDF},
-  key = {230},
-  owner = {logg},
-  pmid = {5120393},
-  timestamp = {2006.01.18},
   url = {http://www.jgp.org/cgi/reprint/58/6/667}
 }
 
@@ -6823,7 +6674,7 @@ Taylor-Hood element.
 	computing},
   booktitle = {Proceedings of the ClusterWorld Conference and Expo},
   year = {2003},
-  note = {Online\\ \url{http://www.linuxclustersinstitute.org/Linux-HPC-Revolution/Archive/PDF03/Mello\_U.pdf}},
+  url = {\url{http://www.linuxclustersinstitute.org/Linux-HPC-Revolution/Archive/PDF03/Mello\_U.pdf}},
   owner = {logg},
   timestamp = {2009.06.06}
 }
@@ -6861,7 +6712,7 @@ Taylor-Hood element.
 
 @ARTICLE{MhurchuAndersonJamrozikEtAl2001,
   author = {C. N. Mhurchu and C. Anderson and K. Jamrozik and G. Hankey and D.
-	Dunbabin },
+	Dunbabin},
   title = {Hormonal factors and risk of aneurysmal subarachnoid hemorrhage:
 	An international population-based, case-control study},
   journal = {Stroke},
@@ -6872,17 +6723,13 @@ Taylor-Hood element.
 
 @CONFERENCE{MichelettiPerotto2005,
   author = {Micheletti, S. and Perotto, S.},
-  title = {{Anisotropic mesh adaptivity in CFD}},
+  title = {Anisotropic mesh adaptivity in {CFD}},
   booktitle = {Adaptive Mesh Refinement, Theory and Applications: Proceedings Of
 	The Chicago Workshop On Adaptive Mesh Refinement Methods, Sept. 3-5,
 	2003},
   year = {2005},
   pages = {171},
   organization = {Springer},
-  comment = {Linked pdf file is preprint published by Politecnico di Milano},
-  file = {:MichelettiPerotto2005.pdf:PDF},
-  owner = {massing},
-  timestamp = {2009.05.07}
 }
 
 @ARTICLE{MilhoratBolognese2003,
@@ -6938,8 +6785,6 @@ Taylor-Hood element.
   year = {1998},
   volume = {30},
   pages = {539-578},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-  adsurl = {http://adsabs.harvard.edu/abs/1998AnRFM..30..539M},
   doi = {10.1146/annurev.fluid.30.1.539}
 }
 
@@ -6958,8 +6803,8 @@ Taylor-Hood element.
 }
 
 @ARTICLE{MoreiraAlmA¡siArcherEtAl2005,
-  author = {J. E. Moreira and G. AlmÃ¡si and C. Archer and R. Bellofatto and
-	P. Bergner and J. R. Brunheroto and M. Brutman and J. G. CastaÃ±os
+  author = {J. E. Moreira and G. Almasi and C. Archer and R. Bellofatto and
+	P. Bergner and J. R. Brunheroto and M. Brutman and J. G. Castanos
 	and P. G. Crumley and M. Gupta and T. Inglett and D. Lieber and D.
 	Limpert and P. McCarthy and M. Megerian and M. Mendell and M. Mundy
 	and D. Reed and R. K. Sahoo and A. Sanomiya and R. Shok and B. Smith
@@ -7031,8 +6876,6 @@ Taylor-Hood element.
   volume = {21},
   pages = {1310--1314},
   number = {12},
-  file = {:NakaoKinoshita2007.pdf:PDF},
-  owner = {massing},
   publisher = {Elsevier},
   timestamp = {2009.05.27}
 }
@@ -7132,7 +6975,7 @@ Taylor-Hood element.
 @UNPUBLISHED{NilsenCaiHoylandEtAl2008,
   author = {J. K. Nilsen and X. Cai and B. H{\o}yland and H. P. Langtangen},
   title = {Simplifying Parallelization of Scientific Codes by a Function-Centric
-	Approach in {Python}},
+	Approach in {P}ython},
   note = {In preparation},
   year = {2008},
   owner = {logg},
@@ -7141,7 +6984,7 @@ Taylor-Hood element.
 
 @ARTICLE{Nochetto1993,
   author = {Nochetto, R. H.},
-  title = {{Removing the saturation assumption in a posteriori error analysis}},
+  title = {Removing the saturation assumption in a posteriori error analysis},
   journal = {Istit. Lombardo Accad. Sci. Lett. Rend. A},
   year = {1993},
   volume = {127},
@@ -7185,14 +7028,6 @@ Taylor-Hood element.
   volume = {50},
   pages = {57--81},
   number = {1},
-  coden = {NUMMA7},
-  fjournal = {Numerische Mathematik},
-  issn = {0029-599X},
-  mrclass = {65N30},
-  mrnumber = {MR864305 (88e:65145)},
-  mrreviewer = {Reinhard Scholz},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{Nedelec1980,
@@ -7203,14 +7038,6 @@ Taylor-Hood element.
   volume = {35},
   pages = {315--341},
   number = {3},
-  coden = {NUMMA7},
-  fjournal = {Numerische Mathematik},
-  issn = {0029-599X},
-  mrclass = {65N30},
-  mrnumber = {MR592160 (81k:65125)},
-  mrreviewer = {P. G. Ciarlet},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{Nedelec1980a,
