--- a/bibliography.bib
+++ b/bibliography.bib
@@ -789,6 +789,7 @@
   institution = {University of Chicago, Department of Computer Science},
   year = {2004},
   number = {TR--2004--09},
+  url    = {http://www.cs.uchicago.edu/research/publications/techreports/TR-2004-09},
   owner = {logg},
   timestamp = {2009.06.06}
 }
