Add note about using \citep or \citet

--- a/TODO
+++ b/TODO
@@ -20,6 +20,7 @@ Things to check
 * Check use of \stackrel{+}{=}
 * Check use of : or , before formula
 * Make sure that all references are available
+* Use \citep or \citet, never \cite
 
 Things to discuss
 
