--- a/bibliography.bib
+++ b/bibliography.bib
@@ -6553,7 +6553,8 @@
   author = {K.-A. Mardal and R. Winther},
   title = {Preconditioning discretizations of systems of partial differential
 	equations},
-  journal = {Numerical Linear Algebra with Applications}
+  journal = {Numerical Linear Algebra with Applications (In Press)},
+  url = {http://dx.doi.org/10.1002/nla.716}  
 }
 
 @ARTICLE{MardalWinther2006,
