Some ref url fixes.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -929,7 +929,7 @@
   author = {D.~Beazley and others},
   title = {{SWIG}: Simplified Wrapper and Interface Generator},
   year = {2009},
-  note = {URL: \url{http://www.swig.org}}
+  url = {http://www.swig.org}
 }
 
 @ARTICLE{Beazley2006,
@@ -949,23 +949,6 @@
   author = {E. B. Becker and G. F. Carey and J. T. Oden},
   owner = {logg},
   timestamp = {2009.06.06}
-}
-
-@TECHREPORT{BeckerBurmanHansbo2008,
-  author = {Becker, R. and Burman, E. and Hansbo, P.},
-  title = {A {N}itsche extended finite element method for incompressible elasticity
-	with discontinuous modulus of elasticity},
-  institution = {Department of Mathematical Sciences
-
-	Division of Mathematics
-
-	CHALMERS UNIVERSITY OF TECHNOLOGY
-
-	UNIVERSITY OF GOTHENBURG},
-  year = {2008},
-  file = {:BeckerBurmanHansbo2008.pdf:PDF},
-  owner = {massing},
-  timestamp = {2009.05.07}
 }
 
 @ARTICLE{BeckerHansboLarson2003,
@@ -1013,7 +996,7 @@
   author = {N. Bell and L. Olson and J. Schroder},
   title = {PyAMG -- Algebraic multigrid solvers in Python},
   year = {2009},
-  note = {URL:\url{http://code.google.com/p/pyamg/}}
+  url = {http://code.google.com/p/pyamg/}
 }
 
 @ARTICLE{BellinSalandinRinaldo1992,
@@ -1098,7 +1081,7 @@
   author = {M. Benzi and M. A. Olshanskii and Z. Wang},
   title = {Augmented {L}agrangian Preconditioners for the Incompressible {N}avier-{S}tokes
 	Equations},
-  note = {url:http://www.mathcs.emory.edu/~molshan/OLSH/publ.html}
+  url = {http://www.mathcs.emory.edu/~molshan/OLSH/publ.html}
 }
 
 @BOOK{BerghLofstrom1976,
@@ -1170,15 +1153,12 @@
 @ARTICLE{BientinesiGunnelsMyersEtAl2005,
   author = {Bientinesi, Paolo and Gunnels, John a. and Myers, Margaret E. and
                   Quintana-Ort\'{\i}, Enrique S. and Geijn, Robert a. Van De},
-  doi = {10.1145/1055531.1055532},
-  file = {:Users/aterrel/Research/articles/p1-bientinesi.pdf:pdf},
-  issn = {00983500},
   journal = {ACM Transactions on Mathematical Software},
   month = {March},
   number = {1},
   pages = {1--26},
   title = {The science of deriving dense linear algebra algorithms},
-  url = {http://portal.acm.org/citation.cfm?doid=1055531.1055532},
+  url = {http://dx.doi.org/10.1145/1055531.1055532},
   volume = {31},
   year = {2005}
 }
@@ -1206,7 +1186,7 @@
   doi = {10.1145/143242.143335},
   owner = {logg},
   timestamp = {2009.06.07},
-  url = {http://portal.acm.org/citation.cfm?id=143242.143335&coll=GUIDE&dl=GUIDE&CFID=33977523&CFTOKEN=83382201}
+  url = {http://dx.doi.org/10.1145/143242.143335}
 }
 
 @INPROCEEDINGS{BischofHovlandNorris2002,
