--- a/TODO
+++ b/TODO
@@ -30,3 +30,4 @@ Things to discuss
 * Figure out where to put code examples and refer to them
 * How to cite: bla bla Foo [2010], or bla bla bla in/by~Foo [2010]
 * Author names: only initials or full names
+* Add some space around definition environment ? 
