added rognes chapter

--- a/book.tex
+++ b/book.tex
@@ -83,7 +83,7 @@
 %\fenicsinput{hake}
 %\fenicsinput{lezar}
 %\fenicsinput{mardal-4}
-%\fenicsinput{rognes}
+\fenicsinput{rognes}
 
 %------------------------------------------------------------------------------
 
