--- a/TODO
+++ b/TODO
@@ -21,6 +21,8 @@ Things to check
 * Check use of : or , before formula
 * Make sure that all references are available
 * Use \citep or \citet, never \cite
+* Add some space around definition environment  
+* Make footnotes full page
 
 Things to discuss
 
@@ -30,4 +32,4 @@ Things to discuss
 * Figure out where to put code examples and refer to them
 * How to cite: bla bla Foo [2010], or bla bla bla in/by~Foo [2010]
 * Author names: only initials or full names
-* Add some space around definition environment ? 
+
