--- a/book.tex
+++ b/book.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,twoside,justified]{layout/fenicsbook}
+\documentclass[a4paper,twoside,justified,notoc]{layout/fenicsbook}
 
 % Book metadata
 \title{Automated\\ \noindent Scientific\\ \noindent Computing}
