Add quite a few more things to the proofreading script

--- a/TODO
+++ b/TODO
@@ -1,33 +1,21 @@
 Things to check
 
 * There should be callouts in text to all floats
-* Remove all warnings
 * Add items to index, should be used in all chapters
 * Problem with numbers in Palatino, 0 looks like o. See FFC chapter
   for an example ("Stage 0").
-* Use of new macro \foralls
-* Use of \nedelec and other name macros
 * Fix wrapping of chapter titles
-* multiindex or multi-index?
-* command line or command-line
-* Use \leqslant instead of \leq?
-* Check for use of \mathcal{T}_h instead of \mathcal{T}
-* Check all editor notes and author notes
 * Use {figure*} where suitable
 * Use of i for local indices and I for global indices
-* Check use of "element tensor" vs "cell tensor"
 * Check use of \stackrel{+}{=}
 * Check use of : or , before formula
 * Make sure that all references are available
 * Add some space around definition environment
 * Make footnotes full page
+* Full names in author list
+* Collect code examples and add references
+* Use of "..." vs ``...''
 
 Things to discuss
 
 * Should there be , after and?
-* Use of "..." vs ``...''
-* Use of "etc" vs "etc."
-* Figure out where to put code examples and refer to them
-* How to cite: bla bla Foo [2010], or bla bla bla in/by~Foo [2010]
-* Author names: only initials or full names
-
