--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2,30 +2,18 @@
 % Encoding: UTF8
 
 @MISC{www:swig,
-<<<<<<< TREE
   title = {Software package},
   author = {SWIG},
-  note = {\url{http://www.swig.org}},
-=======
-  author = {David Beazley and others},
-  title = {{SWIG} software package},
-  url = {http://www.swig.org/},
->>>>>>> MERGE-SOURCE
+  url = {http://www.swig.org},
   key = {SWIG software package},
   owner = {logg},
   timestamp = {2009.06.06}
 }
 
 @MISC{www:weave,
-<<<<<<< TREE
   title = {Software package},
   author = {Weave},
-  note = {URL: {\url{http://scipy.org/Weave}}},
-=======
-  author = {Eric Jones and others},
-  title = {{Weave}: Tools for inlining {C/C++} in {Python}},
   url = {http://scipy.org/Weave},
->>>>>>> MERGE-SOURCE
   key = {{Weave}: Tools for inlining {C/C++} in {Python}},
   owner = {logg},
   timestamp = {2009.06.06}
