--- a/bibliography.bib
+++ b/bibliography.bib
@@ -34,7 +34,7 @@
 @ARTICLE{OlgaardLoggWells2008,
   author = {K. B. \O{}lgaard and A. Logg and G. N. Wells},
   title = {Automated code generation for discontinuous {G}alerkin methods},
-  journal = {{SIAM} Journal on Scientific Computing},
+  journal = {SIAM Journal on Scientific Computing},
   year = {2008},
   volume = {31},
   pages = {849--864},
@@ -47,7 +47,7 @@
   author = {K. B. \O{}lgaard and G. N. Wells},
   title = {Optimisations for Quadrature Representations of Finite Element Tensors
 	through Automated Code Generation},
-  journal = {{ACM} Transactions on Mathematical Software},
+  journal = {ACM Transactions on Mathematical Software},
   year = {2010},
   volume = {37},
   pages = {8:1--8:23},
@@ -890,15 +890,12 @@
   doi = {10.1007/s10237-010-0189-7}
 }
 
-<<<<<<< TREE
 @MISC{Beazleyothers2009,
   title = {Software package},
   author = {SWIG},
   url = {http://www.swig.org}
 }
 
-=======
->>>>>>> MERGE-SOURCE
 @ARTICLE{Beazley2006,
   author = {David M. Beazley},
   title = {{SWIG} : An Easy to Use Tool for Integrating Scripting Languages
@@ -2753,29 +2750,15 @@
 }
 
 @MISC{Ewing2009,
-<<<<<<< TREE
   title = {Software package},
   author = {Pyrex},
-  note = {URL: \url{http://www.cosc.canterbury.ac.nz/greg.ewing/python/Pyrex/}}
-=======
-  author = {G. Ewing},
-  title = {{Pyrex} -- a {L}anguage for {W}riting {P}ython {E}xtension {M}odules},
-  year = {2009},
   url = {http://www.cosc.canterbury.ac.nz/greg.ewing/python/Pyrex/}
->>>>>>> MERGE-SOURCE
 }
 
 @MISC{EwingBradshawBehnelEtAl2009,
-<<<<<<< TREE
   title = {Software package},
   author = {Cython},
-  note = {URL: \url{http://cython.org}}
-=======
-  author = {G. Ewing and R. Bradshaw and S. Behnel and D. S. Seljebotn and others},
-  title = {{Cython}: C-Extensions for {Python}},
-  year = {2009},
   url = {http://cython.org}
->>>>>>> MERGE-SOURCE
 }
 
 @ARTICLE{FarhloulFortin1997,
@@ -3523,7 +3506,7 @@
 }
 
 @ARTICLE{HuangGuoShi2008,
-  title={{Vibration analysis of Kirchhoff plates by the Morley element method}},
+  title={Vibration analysis of {K}irchhoff plates by the {M}orley element method},
   author={Huang, J. and Guo, L. and Shi, Z.},
   journal={Journal of Computational and Applied Mathematics},
   volume={213},
@@ -6521,7 +6504,7 @@
 }
 
 @ARTICLE{MinXu2006,
-  title={{The Morley element for fourth order elliptic equations in any dimensions}},
+  title={The {M}orley element for fourth order elliptic equations in any dimensions},
   author={Ming, W. and Xu, J.},
   journal={Numerische Mathematik},
   volume={103},
@@ -6592,18 +6575,15 @@
   year = {1968},
   volume = {19},
   pages = {149-169},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
-@ARCTICLE{Morley1971,
+@ARTICLE{Morley1971,
   title={{The constant-moment plate-bending element}},
-  author={Morley, L.S.D.},
+  author={Morley, L. S. D.},
   journal={The Journal of Strain Analysis for Engineering Design},
   volume={6},
   number={1},
   pages={20--24},
-  issn={0309-3247},
   year={1971},
   publisher={Prof Eng Publishing}
 }
@@ -7161,15 +7141,9 @@
 }
 
 @UNPUBLISHED{Peterson,
-<<<<<<< TREE
   title = {Software package},
   author = {{F2PY}},
-  note = {\url{http://cens.ioc.ee/projects/f2py2e}},
-=======
-  author = {P. Peterson},
-  title = {{F2PY} software package},
   url = {http://cens.ioc.ee/projects/f2py2e},
->>>>>>> MERGE-SOURCE
   key = {F2PY software package},
   owner = {logg},
   timestamp = {2009.06.06}
