Add kirby-6 and alnes-1.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -305,25 +305,17 @@
   timestamp = {2009.06.06}
 }
 
-@comment{FIXME}
-@ARTICLE{AlnaesMardal2009b,
-  author = {Aln{\ae}s, Martin Sandve and Mardal, Kent-Andre},
-  title = {On the Efficiency of Symbolic Computations Combined with Code Generation
-	for Finite Element Methods},
-  year = {2009},
-  note = {Submitted.},
-  owner = {logg},
-  timestamp = {2009.06.07}
-}
-
-@comment{FIXME}
-@ARTICLE{AlnaesMardal2008,
-  author = {Aln{\ae}s, Martin Sandve and Mardal, Kent-Andre},
-  title = {Symbolic Computations and Code Generation for Finite Element Methods},
-  journal = {journal},
-  year = {2008},
-  owner = {logg},
-  timestamp = {2009.06.06}
+@article{AlnaesMardal2009b,
+ author = {Aln{\ae}s, Martin Sandve and Mardal, Kent-Andr\'{e}},
+ title = {On the efficiency of symbolic computations combined with code
+ generation for finite element methods},
+ journal = {ACM Trans. Math. Softw.},
+ volume = {37},
+ issue = {1},
+ year = {2010},
+ pages = {6:1--6:26},
+ articleno = {6},
+ url = {http://dx.doi.org/10.1145/1644001.1644007},
 }
 
 @INPROCEEDINGS{AlnaesMardalSundnes2007,
