--- a/book.tex
+++ b/book.tex
@@ -43,7 +43,7 @@
 \part{Methodology}
 
 %\fenicsinput{kirby-7}
-%\fenicsinput{kirby-6}
+\fenicsinput{kirby-6}
 %\fenicsinput{kirby-1}
 \fenicsinput{kirby-5}
 \fenicsinput{logg-3}
@@ -61,7 +61,7 @@
 %\fenicsinput{wilbers}
 %\fenicsinput{alnes-3}
 %\fenicsinput{alnes-2}
-%\fenicsinput{alnes-1}
+\fenicsinput{alnes-1}
 %\fenicsinput{hoffman-2}
 %\fenicsinput{mardal-2}
 
